corrected styling on smaller screens

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -385,6 +385,7 @@ h2 {
 @media(max-width: 992px){
     .project-detail-container {
         text-align: center;
+        padding-left: 0;
     }
 
     .project-detail-subheader:after{
